k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fastapi-backend
  labels:
    app: fastapi-backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: fastapi-backend
  template:
    metadata:
      labels:
        app: fastapi-backend
    spec:
      containers:
        - name: fastapi
          image: proyectraser/fastapi-backend:latest
          ports:
            - containerPort: 8081
          volumeMounts:
            - mountPath: /app/data
              name: data-volume
          readinessProbe:
            httpGet:
              path: /metrics
              port: 8081
            initialDelaySeconds: 5
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /metrics
              port: 8081
            initialDelaySeconds: 10
            periodSeconds: 20
      volumes:
        - name: data-volume
          persistentVolumeClaim:
            claimName: fastapi-pvc
