k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: fastapi-service
spec:
  type: NodePort
  selector:
    app: fastapi-backend
  ports:
    - port: 80
      targetPort: 8081
      nodePort: 30080
